# whatsapp-ai-chatbot

./: .gitignore  README.md  README_anti_ban.md  SETUP.md
chatbot-ui/: README.md  chainlit.toml  config.py  requirements.txt  run_app.py
chatbot-ui/.chainlit/: config.toml
chatbot-ui/src/chatbot_ui/: __init__.py  app.py  chatbot_client.py  config.py
node-bot/: MessageQueue.js  app.js  config.js  package-lock.json  package.json
python-api/: .env  env.example  pyproject.toml  redis.md  requirements.txt  test_anti_ban_toggle.py  test_language_detection.py
python-api/config/: bot_config.json
python-api/prompts/: english.txt  romanian.txt  summary_english.txt  summary_romanian.txt
python-api/src/whatsapp_bot/: config.py  main.py  mapper.py  openai_client.py  restore_database.py  setup_database.py
python-api/src/whatsapp_bot/config/: bot_config.json
python-api/src/whatsapp_bot/controllers/: __init__.py  chat_controller.py
python-api/src/whatsapp_bot/database/: __init__.py  database.py  models.py  redis_cache.py  schema.py  setup_db.py
python-api/src/whatsapp_bot/prompts/: default.txt  english.txt
python-api/src/whatsapp_bot/routes/: __init__.py  chat_routes.py  config_routes.py  conversation_routes.py
python-api/src/whatsapp_bot/services/: __init__.py  anti_ban_service.py  backup_service.py  conversation_service.py  language_service.py
python-api/src/whatsapp_bot/utils/: __init__.py  logging_config.py
python-api/tests/: test_anti_ban.py  test_backup.py  test_config.py
